5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1717_2523.log
== TEST (2019-05-20 18:26:51) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	pi = ((an*bn)**2)/(4*tn)
	i = i+1
	print(pi)
-- OUTPUT:
0.5635062354661436
0.5635062354661436
0.5635062354661436
0.5635062354661436
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:27:04) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	pi = ((an*bn)**2)/(4*tn)
	i = i+1
	print(pi)
-- OUTPUT:
0.5635062354661436
0.5635062354661436
0.5635062354661436
0.5635062354661436
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:03:24) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
pi = ((an*bn)**2)/(4*tn)	
print(pi)
-- OUTPUT:
0.5635062354661436
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:04:56) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
pi = ((an+bn)**2)/(4*tn)	
print(pi)
-- OUTPUT:
3.1405792505221686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:05:43) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
pi = ((an+bn)**2)/(4*tn)	
print(pi)
-- OUTPUT:
3.1405792505221686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:05:50) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
pi = ((an+bn)**2)/(4*tn)	
print(pi)
-- OUTPUT:
3.1405792505221686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:06:29) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
pi = ((an+bn)**2)/(4*tn)	
print(round(pi, 14))
-- OUTPUT:
3.14057925052217
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:06:40) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
pi = ((an+bn)**2)/(4*tn)	
print(round(pi, 14))
-- OUTPUT:
3.14057925052217
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:06:53) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	pi = ((an+bn)**2)/(4*tn)	
	print(round(pi, 14))
-- OUTPUT:
3.14057925052217
3.14057925052217
3.14057925052217
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:09:52) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (an + bn)/2
	bn = (an*bn)**0.5
	tn = tn - pn*(a - an)**2
	pn = 2*pn
	i = i+1
	pi = ((an+bn)**2)/(4*tn)	
	print(round(pi, 14))
-- OUTPUT:
2.90778427967643
4.04866875695251
71.83149437841887
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:18:16) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	pi = ((an+bn)**2)/(4*tn)	
	print(round(pi, 14))
-- OUTPUT:
3.14057925052217
3.14057925052217
3.14057925052217
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:18:36) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	pi = ((an+bn)**2)/(4*tn)	
	print(round(pi, 14))
pi = ((an+bn)**2)/(4*tn)	
print(round(pi, 14))	
-- OUTPUT:
3.14057925052217
3.14057925052217
3.14057925052217
3.14057925052217
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:18:56) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	pi = ((an+bn)**2)/(4*tn)	
	print(round(pi, 14))
pi = ((an+bn)**2)/(4*tn)	
print(round(pi, 14))	
-- OUTPUT:
3.14057925052217
3.14057925052217
3.14057925052217
3.14057925052217
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:28:13) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	pi = ((an+bn)**2)/(4*tn)
	a = (an + bn)/2
	b = (an*bn)**0.5
	t = tn - pn*(a - an)**2
	p = 2*pn
	i = i+1
	print(round(pi, 14))
pi = ((an+bn)**2)/(4*tn)	
print(round(pi, 14))	
-- OUTPUT:
3.14057925052217
3.14159265358979
3.14159265358979
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:28:40) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	pi = ((an+bn)**2)/(4*tn)
	a = (an + bn)/2
	b = (an*bn)**0.5
	t = tn - pn*(a - an)**2
	p = 2*pn
	i = i+1
	print(round(pi, 14))
pi = ((a+b)**2)/(4*t)	
print(round(pi, 14))	
-- OUTPUT:
3.14057925052217
3.14159265358979
3.14159265358979
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:28:52) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
i = 1
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	pi = ((an+bn)**2)/(4*tn)
	a = (an + bn)/2
	b = (an*bn)**0.5
	t = tn - pn*(a - an)**2
	p = 2*pn
	i = i+1
	print(round(pi, 14))
pi = ((a+b)**2)/(4*t)	
print(round(pi, 14))	
-- OUTPUT:
3.14057925052217
3.14159265358979
3.14159265358979
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:29:33) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
i = 0
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	pi = ((an+bn)**2)/(4*tn)
	a = (an + bn)/2
	b = (an*bn)**0.5
	t = tn - pn*(a - an)**2
	p = 2*pn
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
3.14057925052217
3.14159265358979
3.14159265358979
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:29:59) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
i = 0
while(i < ntr):
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	pi = ((an+bn)**2)/(4*tn)
	a = (an + bn)/2
	b = (an*bn)**0.5
	t = tn - pn*(a - an)**2
	p = 2*pn
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
3.14057925052217
3.14159265358979
3.14159265358979
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:33:42) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
i = 0
while(i < ntr):
	an = a
	bn = b
	tn = t
	pn = p
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
2.91421356237309
2.91421356237309
2.91421356237309
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:33:52) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

a = 1
b = 1/2**0.5
t = 0.25
p = 1
i = 0
while(i < ntr):
	an = a
	bn = b
	tn = t
	pn = p
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
2.91421356237309
2.91421356237309
2.91421356237309
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:34:50) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	an = a
	bn = b
	tn = t
	pn = p
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    an = a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:35:57) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	a = an
	b = bn
	t = tn
	p = pn
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:36:03) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	a = an
	b = bn
	t = tn
	p = pn
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:36:13) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	a = an
	b = bn
	t = tn
	p = pn
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:36:21) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	a = an
	b = bn
	t = tn
	p = pn
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- OUTPUT:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:36:40) 
-- CODE:
ntr = int(input("Digte o numero de termos desejados: "))

an = 1
bn = 1/2**0.5
tn = 0.25
pn = 1
i = 0
while(i < ntr):
	a = an
	b = bn
	t = tn
	p = pn
	pi = ((a+b)**2)/(4*t)
	an = (a + b)/2
	bn = (a*b)**0.5
	tn = t - p*(a - an)**2
	pn = 2*p
	i = i+1
	print(round(pi, 14))

-- EXECUTION TIME:
0.151917
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:
2.91421356237309
3.14057925052217
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
